# watchdog-pipeline

./: .env.example  .gitignore  LAUNCH-PLAYBOOK.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/watchdog/: config.py  database.py  logging.py
src/watchdog/api/: app.py  deps.py
src/watchdog/api/routes/: anomalies.py  documents.py  entities.py  pipeline.py  search.py  stats.py
src/watchdog/models/: __init__.py  base.py  document.py
src/watchdog/pipeline/: chunker.py  downloader.py  ocr.py  runner.py  triage.py
src/watchdog/pipeline/prompts/: triage_analysis.txt
src/watchdog/services/: claude_client.py  cost_tracker.py  embedding.py
src/watchdog/utils/: hashing.py
tests/: conftest.py  test_api.py  test_chunker.py  test_cost_tracker.py  test_hashing.py  test_triage_parsing.py
