[project]
name = "watchdog-pipeline"
version = "0.1.0"
description = "Automated document analysis pipeline — ingest, OCR, chunk, embed, and triage large document dumps"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["document-analysis", "ocr", "nlp", "ai", "pipeline", "fastapi", "pgvector"]
authors = [{name = "0xCybin"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.24.0",
    "httpx>=0.27.0",
    "datasets>=3.0.0",
    "tiktoken>=0.8.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/0xCybin/watchdog-pipeline"
Issues = "https://github.com/0xCybin/watchdog-pipeline/issues"

[project.scripts]
watchdog-pipeline = "watchdog.pipeline.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
